--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "covers:sync": "node scripts/sync-real-covers.mjs",
     "build": "vite build",
     "preview": "vite preview"
   },
