--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0 --port 5176 --strictPort",
     "covers:sync": "node scripts/sync-real-covers.mjs",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0 --port 5176 --strictPort"
   },
   "dependencies": {
     "react": "^18.3.1",
